# 9th-sem-project

./: README.md  fillrandom.root  gain.C  gain_v.C  thgem.txt
0_500_1450_2450/: gain_1000events_c4.root
0_500_1500_2500/: 1000_events.root  gain.root
0_500_1600_2600/: gain_1000events.root
0_500_1700_2700/: CMakeLists.txt  CMakeLists1.txt  fieldlines.C  gem.C
Experimental result/2022_11_26/: with_faradaycage.Chn  without_FaradayCage.Chn  without_FaradayCage.Spe  without_FaradayCage_2.Chn  without_FaradayCage_2.Spe  without_FaradayCage_3.Chn  wtih_faradaycage.Spe  wtih_faradaycage_1.Spe  wtih_faradaycage_2.Spe  wtih_faradaycage_3.Spe  wtihout_faradaycage_4.Spe
Experimental result/2022_11_26/plot/: noise_data.py  w_fc.txt  wo_fc.txt
test/Gem/: CMakeLists.txt  fieldlines.C  gem.C  gem.py
